--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "description": "frontend-performance-basecamp",
   "main": "index.tsx",
   "scripts": {
+    "start": "npm run serve",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
