chore: package.json output 설정

--- a/package.json
+++ b/package.json
@@ -75,5 +75,9 @@
   },
   "sideEffects": [
     "*.css"
-  ]
+  ],
+  "output": {
+    "directory": "dist",
+    "publicPath": "/perf-basecamp/"
+  }
 }
